--- a/src/style.scss
+++ b/src/style.scss
@@ -143,7 +143,6 @@ h5 {
   height: 8px;
   padding: 10px;
   @include center(row);
-  margin-left: 16px;
   img {
     width: 16px;
     height: 16px;
@@ -161,6 +160,9 @@ h5 {
   transition: background-color 0.3s, color 0.3s;
   font-weight: bold;
   margin-top: 1rem;
+  p {
+    margin-right: 1rem;
+  }
 }
 @keyframes App-logo-spin {
   from {
@@ -179,4 +181,15 @@ input {
   font-weight: 300;
   list-style-type: none;
   font-size: calc(10px + (14 - 10) * ((100vw - 320px) / (1400 - 320)));
+}
+.button-arrow {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding: 0;
+  @include center(row);
+  svg {
+    width: 16px;
+    height: 16px;
+  }
 }
