--- a/src/components/Custom-Slider.scss
+++ b/src/components/Custom-Slider.scss
@@ -80,17 +80,17 @@
   position: absolute;
   bottom: 20px;
 
-  right: 0;
+  left: 50%;
   transform: translateX(-50%);
   display: flex;
   gap: 10px;
 }
 
 .dot {
-  width: 12px;
-  height: 12px;
+  width: 50px;
+  height: 4px;
   background-color: #ccc;
-  border-radius: 50%;
+  border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
