--- a/src/components/InvestorPage.scss
+++ b/src/components/InvestorPage.scss
@@ -63,7 +63,6 @@ h1 {
 }
 
 .container-jr .content-jr {
-  padding: 20px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
   width: 45%;
@@ -98,6 +97,12 @@ h1 {
   height: 200px;
   border-radius: 8px;
   margin-bottom: 10px;
+  
+}
+
+.content-jr .cloud{
+  background: #93c702;
+  object-fit: cover;
 }
 
 h2 {
@@ -465,12 +470,25 @@ h2 {
   border-radius: 15px;
 }
 
+.banner-img {
+  width: 100%;
+  border-radius: 24px;
+  overflow: hidden;
+}
+
+
+.main-banner {
+  .banner-img {
+    width: 60vw;
+  }
+}
+
 .banner-content {
   position: absolute;
-  width: 300px;
-  top: 20%;
-  left: 70%;
-  transform: translate(-70%, -20%);
+  width: 40vw;
+  top: 50%;
+  right: 8%;
+  transform: translateY(-50%);
   text-align: center;
   color: #fff;
   text-align: left;
@@ -478,7 +496,7 @@ h2 {
 
 .banner-content h1 {
   font-size: 2.5rem;
-  background: linear-gradient(to right, white 70%, black 30%);
+  background: linear-gradient(to right, white 50%, black 50%);
   line-height: 1.2;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -497,8 +515,8 @@ h2 {
 /* Video card-bns */
 .video-card-bns {
   display: grid;
-  grid-gap: 3em;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-gap: 5em;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 5fr));
 }
 
 .card-bn {
@@ -546,16 +564,6 @@ h2 {
 }
 .tolol {
   height: 600px;
-}
-.main-banner {
-  .banner-img {
-    width: 70%;
-  }
-}
-.banner-img {
-  width: 100%;
-  border-radius: 24px;
-  overflow: hidden;
 }
 
 .banner-image2 {
