--- a/src/components/Custom-Slider.scss
+++ b/src/components/Custom-Slider.scss
@@ -68,7 +68,7 @@
 
 .image-content {
   width: 65%;
-  img{
+  img {
     max-width: 100%;
     height: auto;
     object-fit: cover;
@@ -100,6 +100,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .slide {
+    padding: 0;
+    flex-direction: column;
+  }
   .slider-section {
     height: auto;
   }
@@ -107,14 +111,6 @@
   .text-content {
     max-width: 90%;
     padding: 20px;
-  }
-
-  .text-content h1 {
-    font-size: 36px;
-  }
-
-  .text-content p {
-    font-size: 16px;
   }
 
   .cta-button-sl {
