--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -126,6 +126,7 @@ form button {
 .subscribe-image img {
   max-width: 100%;
   height: 200px;
+  object-fit: contain;
 }
 
 /* Media Queries for Responsiveness */
