--- a/src/components/InvestorPage.scss
+++ b/src/components/InvestorPage.scss
@@ -96,13 +96,11 @@ h1 {
   width: 100%;
   height: 200px;
   border-radius: 8px;
-  margin-bottom: 10px;
-  
 }
 
-.content-jr .cloud{
-  background: #93c702;
+.cloud img {
   object-fit: cover;
+  // margin-bottom: 10px;
 }
 
 h2 {
@@ -189,7 +187,7 @@ button:hover {
   animation: fadeInUp 0.6s ease-in-out, floatUpDown 3s ease-in-out infinite;
 }
 
-.container-jr img {
+.cloud-big {
   animation: floatUpDown 4s ease-in-out infinite, glow 2s ease-in-out infinite;
 }
 
@@ -351,6 +349,7 @@ h2 {
   justify-content: space-between;
   flex-wrap: wrap;
   margin-bottom: 30px;
+  min-width: 200px;
 }
 
 .feature-item {
@@ -473,38 +472,51 @@ h2 {
 .banner-img {
   width: 100%;
   border-radius: 24px;
-  overflow: hidden;
+  // overflow: hidden;
 }
-
 
 .main-banner {
   .banner-img {
     width: 60vw;
+    position: relative;
+  }
+
+  .banner-content {
+    position: absolute;
+    width: 60vw;
+    top: 50%;
+    left: 40vw;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #fff;
+    text-align: left;
+
+    h1 {
+      font-size: 2.5rem;
+      background: linear-gradient(to left, black 64%, white 38%);
+      line-height: 1.2;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      color: transparent;
+      font-weight: bold;
+      max-width: 700px;
+    }
   }
 }
 
-.banner-content {
-  position: absolute;
-  width: 40vw;
-  top: 50%;
-  right: 8%;
-  transform: translateY(-50%);
-  text-align: center;
-  color: #fff;
-  text-align: left;
-}
+// .banner-content h1 {
+//   font-size: 2.5rem;
+//   background: linear-gradient(to right, white 50%, black 50%);
+//   line-height: 1.2;
+//   -webkit-background-clip: text;
+//   -webkit-text-fill-color: transparent;
+//   background-clip: text;
+//   color: transparent;
+//   font-weight: bold;
+//   max-width: 700px;
+// }
 
-.banner-content h1 {
-  font-size: 2.5rem;
-  background: linear-gradient(to right, white 50%, black 50%);
-  line-height: 1.2;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  color: transparent;
-  font-weight: bold;
-  max-width: 700px;
-}
 .play-button {
   margin-top: 20px;
   font-size: 50px;
@@ -698,11 +710,6 @@ p.unique-subtitle {
 }
 
 @media (max-width: 768px) {
-  h1 {
-    font-size: 2rem;
-    text-align: center;
-  }
-
   p.unique-subtitle {
     font-size: 0.9rem;
     text-align: center;
