--- a/src/components/LandingPage.scss
+++ b/src/components/LandingPage.scss
@@ -497,6 +497,25 @@ h1 span.quote {
     margin: 0;
     margin-bottom: 1rem;
   }
+  .content{
+    padding: 0;
+    flex-direction: column;
+  }
+  .text-content{
+    width: 100%;
+    max-width: 100% !important;
+  }
+  .cards-container1{
+    width: 100%;
+    margin-left: 20px;
+    height: 110vh;
+  }
+  .company-info{
+    width: 100%;
+  }
+  .home-container{
+    overflow: hidden;
+  }
 }
 
 @media (max-width: 480px) {
