--- a/src/style.scss
+++ b/src/style.scss
@@ -195,6 +195,25 @@ h5 {
   font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (1400 - 320)));
 }
 
+.haha{
+  /* background-image: url("assets/videosplit.jpg"); */
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+.haha img{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.haha .text-content{
+  position: relative;
+  z-index: 10;
+  padding: 4rem;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
