--- a/src/style.scss
+++ b/src/style.scss
@@ -200,10 +200,10 @@ h5 {
   width: 100%;
   height: 100vh;
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
 }
-.haha img{
+.haha .img-split{
   position: absolute;
   top: 0;
   left: 0;
@@ -212,6 +212,9 @@ h5 {
   position: relative;
   z-index: 10;
   padding: 4rem;
+}
+.haha .text-content{
+  text-align: center;
 }
 
 .App-header {
